--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -14,3 +14,10 @@
     padding: 0.5em;
     color: var(--azul-escuro);
 }
+
+.banner__texto {
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0 28%;
+    color: var(--cinza-claro);
+}
