doc melhor o meu html e criando o meu depoimento

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 @import url(banner.css);
 @import url(metricas.css);
 @import url(vagas.css);
+@import url(depoimento.css);
 
 :root {
     --cor-de-fundo: #FFFFFF;
