--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -38,3 +38,41 @@
     margin-left: 1em;
     border-radius: 5px;
 }
+
+.login__mobile,
+.cabecalho__imagem__mobile,
+.opcoes__mobile {
+    display: none;
+}
+
+@media screen and (max-width: 420px) {
+
+    .login__mobile,
+    .cabecalho__imagem__mobile,
+    .opcoes__mobile{
+        display: block;
+    }
+
+    .cabecalho__imagem,
+    .opcoes,
+    .login,
+    .lista__opcoes__link {
+        display: none;
+    }
+
+    .cabecalho {
+        display: block;
+        text-align: center;
+        padding: 1em;
+    }
+
+    .login__mobile{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .cabecalho__imagem__mobile {
+        margin: auto;
+        padding: 0.5em;
+    }
+}
