criando e finalizando responsividade mobile (420)

--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -23,5 +23,11 @@
 }
 
 @media screen and (max-width: 420px) {
-    
+    .banner {
+        margin: 4em 0.5em;
+    }
+
+    .banner__texto {
+        margin: 0 14%;
+    }
 }
